--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             max-width: 100%;
             height: auto;
             display: block;
+            user-drag: none; /* Disable image dragging in Webkit browsers */
+            -webkit-user-drag: none; /* Disable image dragging in non-Webkit browsers */
         }
         .selection {
             position: absolute;
@@ -74,6 +76,7 @@
     });
 
     image.addEventListener('mousedown', (e) => {
+        e.preventDefault();  // Prevent default drag behavior
         const rect = image.getBoundingClientRect();
         startX = ((e.clientX - rect.left) / rect.width) * 100;
         startY = ((e.clientY - rect.top) / rect.height) * 100;
