--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     const container = document.getElementById('image-container');
     const bbcodeOutput = document.getElementById('bbcode-output');
     let startX, startY, endX, endY;
+    let isSelecting = false;
     const selections = [];
 
     imageUpload.addEventListener('change', (event) => {
@@ -75,33 +76,45 @@
         }
     });
 
-    image.addEventListener('mousedown', (e) => {
-        e.preventDefault();  // Prevent default drag behavior
+    image.addEventListener('click', (e) => {
         const rect = image.getBoundingClientRect();
-        startX = ((e.clientX - rect.left) / rect.width) * 100;
-        startY = ((e.clientY - rect.top) / rect.height) * 100;
+        const x = ((e.clientX - rect.left) / rect.width) * 100;
+        const y = ((e.clientY - rect.top) / rect.height) * 100;
 
-        const selectionDiv = document.createElement('div');
-        selectionDiv.className = 'selection';
-        selectionDiv.style.left = `${startX}%`;
-        selectionDiv.style.top = `${startY}%`;
-        container.appendChild(selectionDiv);
+        if (!isSelecting) {
+            // Start a new selection
+            startX = x;
+            startY = y;
+            isSelecting = true;
+            
+            // Remove any existing selection
+            resetSelections();
 
-        function onMouseMove(event) {
-            endX = ((event.clientX - rect.left) / rect.width) * 100;
-            endY = ((event.clientY - rect.top) / rect.height) * 100;
+            // Create a new selection element
+            const selectionDiv = document.createElement('div');
+            selectionDiv.className = 'selection';
+            selectionDiv.style.left = `${startX}%`;
+            selectionDiv.style.top = `${startY}%`;
+            container.appendChild(selectionDiv);
 
-            selectionDiv.style.width = `${endX - startX}%`;
-            selectionDiv.style.height = `${endY - startY}%`;
+        } else {
+            // Finish the selection
+            endX = x;
+            endY = y;
+            isSelecting = false;
+
+            // Calculate the dimensions and position
+            const width = Math.abs(endX - startX);
+            const height = Math.abs(endY - startY);
+            const posX = Math.min(startX, endX);
+            const posY = Math.min(startY, endY);
+
+            const selectionDiv = container.querySelector('.selection');
+            selectionDiv.style.left = `${posX}%`;
+            selectionDiv.style.top = `${posY}%`;
+            selectionDiv.style.width = `${width}%`;
+            selectionDiv.style.height = `${height}%`;
         }
-
-        function onMouseUp() {
-            image.removeEventListener('mousemove', onMouseMove);
-            image.removeEventListener('mouseup', onMouseUp);
-        }
-
-        image.addEventListener('mousemove', onMouseMove);
-        image.addEventListener('mouseup', onMouseUp);
     });
 
     function addSelection() {
@@ -114,6 +127,8 @@
         const posX = Math.min(startX, endX);
         const posY = Math.min(startY, endY);
 
+        // Store the BBCode selection data
+        selections.length = 0; // Ensure only one selection at a time
         selections.push(`${posX.toFixed(2)} ${posY.toFixed(2)} ${width.toFixed(2)} ${height.toFixed(2)} ${url} ${name}`);
         updateBBCode();
     }
